Explain disabled dynamic agent loading